--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <h1>
-
-        HOLA GIT
-
+        HOLA GIT 2.0
     </h1>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur voluptas, ipsum alias vitae quas consequuntur quaerat voluptatum nisi iste, nemo mollitia, quae culpa dolorum nihil dolor reprehenderit sit sapiente quos!</p>
 </body>
 </html>
