--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,6 +12,12 @@
         HOLA GIT 2.0
     </h1>
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur voluptas, ipsum alias vitae quas consequuntur quaerat voluptatum nisi iste, nemo mollitia, quae culpa dolorum nihil dolor reprehenderit sit sapiente quos!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur voluptas, ipsum alias vitae quas consequuntur quaerat voluptatum nisi iste, nemo mollitia, quae culpa dolorum nihil dolor reprehenderit sit sapiente quos! <br><br>
+    
+    <a href="https://www.google.com/" target="_blank">google</a>
+
+    </p>
+
+
 </body>
 </html>
